# codypendent

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  clippy.toml  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
benches/crdt-bench/: Cargo.toml
benches/crdt-bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: acp.rs  client.rs  commands.rs  connection.rs  eval.rs  lib.rs  main.rs  stream.rs  theme_select.rs  tui.rs
crates/cli/tests/: docs_publish_it.rs  eval_it.rs  jsonl_it.rs  promote_it.rs  workflow_it.rs
crates/codypendentd/: Cargo.toml
crates/codypendentd/src/: blackboard.rs  documents.rs  executor.rs  main.rs  promotion.rs  publish.rs  routing.rs  scan.rs  session_history.rs  workflow_exec.rs  workflows.rs
crates/codypendentd/tests/: blackboard_it.rs  docs_sync_it.rs  recovery_it.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: approvals.rs  artifacts.rs  blackboard.rs  commands.rs  db.rs  documents.rs  executor.rs  instance.rs  ledger.rs  lib.rs  main.rs  model_profiles.rs  projections.rs  promotion.rs  recovery.rs  replay.rs  server.rs  subscriptions.rs  workflow_stream.rs  workflows.rs  worktrees.rs
crates/daemon/src/policy/: config.rs  mod.rs  scope.rs
crates/daemon/tests/: persistence.rs  policy_it.rs  recovery_it.rs  replay.rs  server_it.rs  socket.rs
crates/eval/: Cargo.toml
crates/eval/src/: case.rs  cluster.rs  db.rs  grade.rs  lib.rs  promote.rs  regression.rs  store.rs
crates/eval/tests/: corpus_it.rs  learning_loop_it.rs  promotion_store_it.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: acp.rs  acp_client.rs  lib.rs
crates/integrations/src/github/: client.rs  idempotency.rs  mod.rs  model.rs  secret.rs
crates/integrations/src/ide/: bridge.rs  debounce.rs  mod.rs  provenance.rs
crates/integrations/src/webhook/: config.rs  ingest.rs  mod.rs  normalize.rs  server.rs  store.rs  verify.rs
crates/integrations/tests/: github_it.rs  ide_it.rs  webhook_it.rs
crates/knowledge/: Cargo.toml
crates/knowledge/examples/skills/fix-ci/: SKILL.md  skill.toml
crates/knowledge/examples/skills/fix-ci/references/: cargo-commands.md
crates/knowledge/examples/skills/fix-ci/scripts/: reproduce.sh
crates/knowledge/examples/skills/fix-ci/tests/: cases.md
crates/knowledge/src/: adapter.rs  builtin.rs  codegraph.rs  context.rs  db.rs  lib.rs  manifest.rs  memory.rs  observer.rs  outbox.rs  registry.rs  repomap.rs  skill_exec.rs  types.rs
crates/knowledge/src/docs/: apply.rs  collab.rs  crdt.rs  leases.rs  mod.rs  model.rs  render.rs  replica.rs  staleness.rs  store.rs
crates/knowledge/src/retrieval/: bm25.rs  config.rs  embed.rs  mod.rs  vector.rs
crates/knowledge/tests/: codegraph_it.rs  context_it.rs  docs_apply_it.rs  docs_collab_it.rs  docs_it.rs  docs_leases_it.rs  docs_publish_it.rs  foundation_it.rs  memory_it.rs  registry_it.rs  retrieval_eval.rs  semantic_it.rs  skill_exec_it.rs  staleness_it.rs
crates/knowledge/tests/fixtures/: retrieval-eval.jsonl
crates/protocol/: Cargo.toml
crates/protocol/src/: artifact.rs  blackboard.rs  capabilities.rs  catchup.rs  command.rs  discovery.rs  document.rs  envelope.rs  error.rs  events.rs  framing.rs  handshake.rs  ide.rs  ids.rs  input.rs  lib.rs  run.rs  version.rs  workflow.rs
crates/protocol/tests/: golden_vectors.rs
crates/providers/: Cargo.toml  builtin_catalog.toml
crates/providers/src/: catalog.rs  credential.rs  lib.rs  model.rs
crates/routing/: Cargo.toml
crates/routing/src/: arms.rs  capability.rs  classify.rs  lib.rs  policy.rs  profile.rs  router.rs
crates/routing/tests/: route_and_escalate_it.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  bench.rs  blackboard.rs  lib.rs  models.rs
crates/runtime/src/tools/: blackboard.rs  git.rs  github.rs  mod.rs  read_file.rs  repository.rs  salient.rs  search.rs  shell.rs
crates/runtime/tests/: agent_it.rs  tools_it.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: executor.rs  lib.rs  lifecycle.rs  manifest.rs  permission.rs  profile.rs  sanitize.rs  trust_store.rs  verify.rs
crates/sandbox/tests/: enforcement_it.rs  trust_verify_it.rs
crates/test-support/: Cargo.toml
crates/test-support/fixtures/: events-basic.jsonl
crates/test-support/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: action.rs  input.rs  lib.rs  palette.rs  reduce.rs  render.rs  state.rs  terminal.rs  theme.rs  theme_pack.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: agent.rs  binding.rs  blackboard.rs  budget.rs  compile.rs  conductor.rs  db.rs  drive.rs  lib.rs  model.rs  registry.rs  resolve.rs  source.rs  store.rs
crates/workflow/tests/: blackboard_it.rs  spec_it.rs  store_it.rs
docs/: CONTRIBUTING.md  MANIFEST.json  PROJECT_REVIEW_2026-07-17.md  PROJECT_SCAFFOLD.md  README.md  SECURITY.md  TIMELINE.md  book.toml
docs/architecture/: backend-daemon.md  model-provider-selection.md  policy-and-scope.md  protocol.md
docs/docs/: 00-index.md  01-vision-and-invariants.md  02-system-architecture.md  03-daemon-client-protocol.md  04-agent-runtime-and-workflows.md  05-skills-tools-and-plugins.md  06-memory-and-knowledge-fabric.md  07-code-intelligence.md  08-docs-studio.md  09-model-routing-and-compaction.md  10-ide-github-and-inputs.md  11-security-and-governance.md  12-agent-framework-rs-integration.md  13-observability-evaluation-learning.md  14-core-data-contracts.md  15-roadmap.md  16-testing-strategy.md  17-architecture-decisions.md  (+5 more)
evals/: README.md
migrations/: 0001_init.sql  0002_phase1.sql  0003_phase2.sql  0004_codegraph_source_path.sql  0005_phase3.sql  0006_ide_context.sql  0007_approvals_run_index.sql  0008_phase4_documents.sql  0009_document_leases.sql  0010_workflow_runs.sql  0011_workflow_manifest.sql  0012_workflow_repository.sql  0013_workflow_node_errors.sql  0014_model_profiles.sql  0015_promotion.sql
protocol-vectors/: README.md  artifact.json  blackboard.json  capabilities.json  catchup.json  command.json  document.json  envelope.json  error.json  events.json  handshake.json  ide.json  input.json  run.json  workflow.json
(+58 files in other folders)
