[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
    "crates/test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/CodeHalwell/codypendent"

[workspace.dependencies]
# Internal crates
codypendent-protocol = { path = "crates/protocol" }
codypendent-daemon = { path = "crates/daemon" }
codypendent-tui = { path = "crates/tui" }
codypendent-test-support = { path = "crates/test-support" }

# agent-framework-rs is pinned here in Phase 0 (roadmap requirement) and first
# consumed by the runtime layer in Phase 1. The runtime crate selects providers
# behind features (ADR-009: selected crates, never the umbrella `full`).
agent-framework-core = "0.1.1"
agent-framework-openai = "0.1.1"
agent-framework-anthropic = "0.1.1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Hashing (content-addressed artifact store)
sha2 = "0.10"
hex = "0.4"

# Async traits and config parsing
async-trait = "0.1"
toml = "0.8"

# Async runtime and serialization
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time", "process", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid"] }

# CLI and paths
clap = { version = "4", features = ["derive"] }
directories = "6"

# Test utilities
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
