[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/codypendentd",
    "crates/cli",
    "crates/tui",
    "crates/runtime",
    "crates/knowledge",
    "crates/integrations",
    "crates/workflow",
    "crates/sandbox",
    "crates/routing",
    "crates/eval",
    "crates/test-support",
]
# The CRDT selection benchmark (Phase 4, STEP 4.1) is its own standalone
# workspace so Automerge/Yrs — pulled in only for the comparison — never enter
# the product's dependency graph. Excluded here so a root `cargo` command never
# tries to fold it into this workspace.
exclude = ["benches/crdt-bench"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/CodeHalwell/codypendent"
license = "MIT"

[workspace.dependencies]
# Internal crates
codypendent-protocol = { path = "crates/protocol" }
codypendent-daemon = { path = "crates/daemon" }
codypendent-tui = { path = "crates/tui" }
codypendent-runtime = { path = "crates/runtime" }
codypendent-knowledge = { path = "crates/knowledge" }
codypendent-integrations = { path = "crates/integrations" }
codypendent-workflow = { path = "crates/workflow" }
codypendent-sandbox = { path = "crates/sandbox" }
codypendent-routing = { path = "crates/routing" }
codypendent-eval = { path = "crates/eval" }
codypendent-test-support = { path = "crates/test-support" }

# agent-framework-rs is pinned here in Phase 0 (roadmap requirement) and first
# consumed by the runtime layer in Phase 1. The runtime crate selects providers
# behind features (ADR-009: selected crates, never the umbrella `full`).
agent-framework-core = "0.1.1"
agent-framework-openai = "0.1.1"
agent-framework-anthropic = "0.1.1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Hashing (content-addressed artifact store)
sha2 = "0.10"
hex = "0.4"

# Plugin signature verification (Phase 6, STEP 6.1). `ed25519-dalek` verifies a
# publisher signature over the canonical `codypendent-plugin-signature-v1` digest
# (`sandbox::verify::signing_digest`) — a digest of the *whole manifest* (every
# field but the signature), so a signature can't be replayed against any altered
# field (capabilities, runtime command, resource caps, scopes, …); `base64`
# decodes the signature and publisher key carried as text in `plugin.toml`'s
# `[security]`. Pinned to a version that builds on the workspace's rust-version (1.82).
ed25519-dalek = "=2.2.0"
base64 = "0.22"

# GitHub & IDE integrations (Phase 3). `reqwest` is the typed GitHub client's
# HTTP transport (rustls, no system OpenSSL); `hmac` verifies webhook
# `X-Hub-Signature-256`. `wiremock` (dev) is the mock GitHub server.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
wiremock = "0.6"

# Async traits and config parsing
async-trait = "0.1"
toml = "0.8"
# Declarative workflow manifests (Phase 5, STEP 5.1) are YAML — the shape of
# `docs/specs/workflow.yaml`. Kept out of every other crate's graph: only
# `codypendent-workflow` depends on it.
serde_yaml = "0.9"

# Async runtime and serialization
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "time", "process", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Stream combinators. `StreamExt::next` drives the framework `ChatStream`
# (`ChatClient::get_streaming_response`) in the runtime's live model driver;
# pulled in only with the runtime's `provider-openai` feature.
futures = "0.3"

# Identifiers and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid"] }

# Knowledge fabric (Phase 2): full-text (BM25), tree-sitter code graph, fs watch.
# The vector layer stays abstracted behind a trait — Phase 2 ships a small
# embedded cosine index; Qdrant is a Phase 4+ option behind the same trait.
tantivy = "0.22"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
notify = "7"

# Collaborative-document CRDT (Phase 4, ADR-016). Selected over Automerge/Yrs by
# the STEP 4.1 benchmark (`benches/crdt-bench`). The CRDT snapshot is
# authoritative for document drafts; Git stores reviewed Markdown snapshots.
loro = "1.13"

# CLI and paths
clap = { version = "4", features = ["derive"] }
directories = "6"

# Test utilities
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
