[package]
name = "codypendent-cli"
description = "codypendent: the command-line entry point (daemon lifecycle in Phase 0; TUI attaches in Phase 1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "codypendent_cli"
path = "src/lib.rs"

[[bin]]
name = "codypendent"
path = "src/main.rs"

[dependencies]
codypendent-protocol = { workspace = true }
codypendent-tui = { workspace = true }
codypendent-knowledge = { workspace = true }
codypendent-integrations = { workspace = true }
# The declarative workflow compiler, exposed via `codypendent workflow validate`
# (Phase 5 STEP 5.1) so authors can check a manifest before it ever runs.
codypendent-workflow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
# Names the `SqlitePool` type the knowledge-fabric read helpers pass around (the
# TUI projection seam). Already a transitive dependency via `codypendent-knowledge`.
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
