[package]
name = "codypendent-cli"
description = "codypendent: the command-line entry point (daemon lifecycle in Phase 0; TUI attaches in Phase 1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "codypendent_cli"
path = "src/lib.rs"

[[bin]]
name = "codypendent"
path = "src/main.rs"

[dependencies]
codypendent-protocol = { workspace = true }
codypendent-tui = { workspace = true }
codypendent-knowledge = { workspace = true }
codypendent-integrations = { workspace = true }
# The declarative workflow compiler, exposed via `codypendent workflow validate`
# (Phase 5 STEP 5.1) so authors can check a manifest before it ever runs.
codypendent-workflow = { workspace = true }
# The plugin security boundary, exposed via `codypendent plugin inspect`/`diff`
# (Phase 6 STEP 6.1) so a user sees a plugin's capabilities + permission diff.
codypendent-sandbox = { workspace = true }
# The EvalCase/Assertion harness, exposed via `codypendent eval run` (Phase 7
# STEP 7.1) so a suite scores against the objective RunObservation this client
# builds from a headless run's own wire event stream.
codypendent-eval = { workspace = true }
# `codypendent models bench <id>` (Phase 7 STEP 7.2.2) measures a local model
# with the runtime bench harness and persists the profile through the daemon's
# `ModelProfileStore` (migration 0014) — an offline measurement/maintenance
# command over `model_profiles`, opening the DB the same migrated way the daemon
# does (WAL + busy_timeout make the concurrent open safe).
codypendent-daemon = { workspace = true }
codypendent-runtime = { workspace = true }
# The measured `ModelProfile` the bench produces and persists (its types are
# named in `models_bench`); a leaf crate, no cycle.
codypendent-routing = { workspace = true }
# The provider/auth data model + built-in catalog (Task 8), read here to seed
# the TUI's `/provider` picker projection — a daemon-free, network-free leaf
# crate, exactly like `codypendent-routing` above.
codypendent-providers = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Resolves the platform config dir for the trusted-publisher key store
# (`<config_dir>/codypendent/trusted_publishers.toml`), the `models.toml` precedent.
directories = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
# Names the `SqlitePool` type the knowledge-fabric read helpers pass around (the
# TUI projection seam). Already a transitive dependency via `codypendent-knowledge`.
sqlx = { workspace = true }
# `codypendent eval run` (Phase 7 STEP 7.1) clones each case's pinned fixture
# revision into a scratch checkout per run, so the vendored fixture itself is
# never mutated.
tempfile = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }

[lints]
workspace = true
