[package]
name = "codypendent-codypendentd"
description = "codypendentd assembly binary: wires the daemon server to the runtime agent loop via a RunExecutor (dependency inversion)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "codypendentd"
path = "src/main.rs"

[dependencies]
codypendent-daemon = { workspace = true }
codypendent-runtime = { workspace = true }
codypendent-protocol = { workspace = true }
codypendent-knowledge = { workspace = true }
codypendent-integrations = { workspace = true }
codypendent-workflow = { workspace = true }
codypendent-eval = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# uuid: per-run worktree lease ids (T5) + the docs-publish scratch-worktree
# directory name (Phase 4 STEP 4.4). thiserror: publish-path error types.
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
