[package]
name = "codypendent-codypendentd"
description = "codypendentd assembly binary: wires the daemon server to the runtime agent loop via a RunExecutor (dependency inversion)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "codypendentd"
path = "src/main.rs"

[dependencies]
codypendent-daemon = { workspace = true }
codypendent-runtime = { workspace = true }
codypendent-protocol = { workspace = true }
# The Phase-7 utility router (behind the default-OFF routing seam in
# `src/routing.rs`): `Router::route`/`escalate`, `TaskNode`, the security hard
# filter, and the classifier this assembly builds a `TaskNode` for.
codypendent-routing = { workspace = true }
codypendent-knowledge = { workspace = true }
codypendent-integrations = { workspace = true }
codypendent-workflow = { workspace = true }
codypendent-eval = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Parses the `<data_dir>/routing.toml` registry item that enables the Phase-7
# routing seam (default OFF), the `models.toml` precedent.
toml = { workspace = true }
chrono = { workspace = true }
# uuid: per-run worktree lease ids (T5) + the docs-publish scratch-worktree
# directory name (Phase 4 STEP 4.4). thiserror: publish-path error types.
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
