[package]
name = "codypendent-daemon"
description = "codypendentd: persistence, command handling, subscriptions, and recovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "codypendentd"
path = "src/main.rs"

[dependencies]
codypendent-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
codypendent-test-support = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
