[package]
name = "codypendent-daemon"
description = "codypendentd: persistence, command handling, subscriptions, and recovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# Lib-only: the `codypendentd` binary now lives in `crates/codypendentd` (the
# assembly layer that depends on BOTH this crate and `codypendent-runtime` and
# injects a `RunExecutor`). Keeping the daemon lib-only is what breaks the
# would-be dependency cycle (runtime depends on daemon).

[dependencies]
codypendent-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
# Robust home resolution for policy path expansion: `$HOME` with an OS
# fallback, so a stripped environment cannot silently drop `$HOME/...` DENY
# entries (they fail closed instead — see `policy::build_path_scope`).
directories = { workspace = true }
# Webhook-style HMAC is already a workspace dep (Phase 3); here it signs resume
# tokens (`server::mint_resume_token`) instead of the ad-hoc sha2 sandwich.
hmac = { workspace = true }

[dev-dependencies]
codypendent-test-support = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
