[package]
name = "codypendent-knowledge"
description = "The knowledge fabric: governed registry, hybrid retrieval, memory, and the code graph. A library the daemon and runtime consume; it never depends on them."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# Depends only on the protocol (shared IDs + wire types) and external crates —
# never on the daemon or runtime, which depend on THIS crate. That inversion is
# what lets the registry/memory/graph live in one reusable place.

[dependencies]
codypendent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
tantivy = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
notify = { workspace = true }
# Collaborative-document CRDT (Phase 4, ADR-016) — authoritative for drafts.
loro = { workspace = true }
# For `spawn_blocking` around the package walk/hash (sqlx already binds this
# crate to the tokio runtime; this only names it directly).
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
