[package]
name = "codypendent-protocol"
description = "Codypendent Protocol: wire types, identifiers, envelopes, framing, and daemon discovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
directories = { workspace = true }

[lints]
workspace = true
