[package]
name = "codypendent-runtime"
description = "codypendent-runtime: agent runs, tools, approvals bridge, model integration, context, and compaction. The only crate that depends on agent-framework-rs (behind provider features, ADR-009)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
codypendent-protocol = { workspace = true }
codypendent-daemon = { workspace = true }
codypendent-integrations = { workspace = true }
# The `codypendent models bench <id>` harness (`src/bench.rs`) measures a local
# model into `codypendent_routing`'s `LocalBench` + `ModelCapabilities` +
# `ModelProfile`. `codypendent-routing` is a leaf crate (protocol-only), so this
# adds no cycle.
codypendent-routing = { workspace = true }
agent-framework-core = { workspace = true }
agent-framework-openai = { workspace = true, optional = true }
agent-framework-anthropic = { workspace = true, optional = true }
# Drives the framework `ChatStream` (`get_streaming_response`) in the live
# `FrameworkModelDriver`; only needed when a streaming provider is compiled in.
futures = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { workspace = true }

[features]
default = ["provider-openai"]
provider-openai = ["dep:agent-framework-openai", "dep:futures"]
provider-anthropic = ["dep:agent-framework-anthropic"]

[lints]
workspace = true
